Bug 237423 - webrtc/canvas-to-peer-connection.html is flakily failing a test assertion
Summary: webrtc/canvas-to-peer-connection.html is flakily failing a test assertion
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-03-03 05:33 PST by youenn fablet
Modified: 2022-04-05 10:49 PDT (History)
7 users (show)

See Also:


Attachments
Patch (8.63 KB, patch)
2022-03-03 07:53 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Patch (8.62 KB, patch)
2022-03-03 09:10 PST, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2022-03-03 05:33:53 PST
webrtc/canvas-to-peer-connection.html is flakily failing a test assertion
Comment 1 Radar WebKit Bug Importer 2022-03-03 07:28:59 PST
<rdar://problem/89753152>
Comment 2 youenn fablet 2022-03-03 07:53:37 PST
Created attachment 453736 [details]
Patch
Comment 3 Eric Carlson 2022-03-03 08:24:18 PST
Comment on attachment 453736 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=453736&action=review

r=me once the bots are happy

> LayoutTests/ChangeLog:10
> +        To ensure we are not reading a previous test frame, what we do is chaning the size of the canvas before doing the test.

s/is chaning the size/is change the size/
Comment 4 youenn fablet 2022-03-03 09:10:42 PST
Created attachment 453749 [details]
Patch
Comment 5 EWS 2022-03-04 00:11:31 PST
Committed r290821 (248057@main): <https://commits.webkit.org/248057@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 453749 [details].