webrtc/canvas-to-peer-connection.html is flakily failing a test assertion https://bugs.webkit.org/show_bug.cgi?id=237423

Reviewed by Eric Carlson.

Source/WebCore:

Make sure the rotation session size is matching the buffer size.
Covered by updated test.

* platform/graphics/cocoa/GraphicsContextGLCocoa.h:
* platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::paintCompositedResultsToMediaSample):

LayoutTests:

WebRTC pipeline is lossy so frames might disappear.
For that reason, we need to send multiple times the same frame to ensure we can read the expected frame.
To ensure we are not reading a previous test frame, what we do is changing the size of the canvas before doing the test.
This patch reduces the number of iterations to ensure the test is not too long to run.

* webrtc/canvas-to-peer-connection.html:



Canonical link: https://commits.webkit.org/248057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290821 268f45cc-cd09-0410-ab3c-d52691b4dbfc